About page edited to have more content.

--- a/Pages/About.cshtml
+++ b/Pages/About.cshtml
@@ -1,4 +1,7 @@
 ﻿@page
 @model WebApplication1_W0.Pages.AboutModel
 @{
+    ViewData["Title"] = "About";
 }
+<h1>@ViewData["Title"]</h1>
+<p>A top secret feature;</p>
