Added a message from our group.

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -6,5 +6,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Hello from this Git project.</a>.</p>
+    <p>Hello from our group's Git project.</a>.</p>
 </div>
